// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuestionsListSchema should not accept inconsistent key and id: multiple 1`] = `
"[
  {
    \\"code\\": \\"custom\\",
    \\"message\\": \\"The key for the question in questions list should be same as its question ID.\\",
    \\"path\\": []
  }
]"
`;

exports[`QuestionsListSchema should not accept inconsistent key and id: single 1`] = `
"[
  {
    \\"code\\": \\"custom\\",
    \\"message\\": \\"The key for the question in questions list should be same as its question ID.\\",
    \\"path\\": []
  }
]"
`;

exports[`QuestionsListSchema should not accept non-existent next: multiple 1`] = `
"[
  {
    \\"code\\": \\"custom\\",
    \\"message\\": \\"A question's \`next\` question ID is not present in the question list.\\",
    \\"path\\": []
  }
]"
`;

exports[`QuestionsListSchema should not accept non-existent next: single 1`] = `
"[
  {
    \\"code\\": \\"custom\\",
    \\"message\\": \\"A question's \`next\` question ID is not present in the question list.\\",
    \\"path\\": []
  }
]"
`;

exports[`QuestionsListSchema should show individual question error: multiple 1`] = `
"[
  {
    \\"code\\": \\"invalid_union\\",
    \\"unionErrors\\": [
      {
        \\"issues\\": [
          {
            \\"code\\": \\"invalid_type\\",
            \\"expected\\": \\"Slider\\",
            \\"received\\": \\"ChoicesWithSingleAnswer\\",
            \\"path\\": [
              \\"Feel_Ideal\\",
              \\"type\\"
            ],
            \\"message\\": \\"Expected Slider, received ChoicesWithSingleAnswer\\"
          },
          {
            \\"code\\": \\"invalid_type\\",
            \\"expected\\": \\"array\\",
            \\"received\\": \\"undefined\\",
            \\"path\\": [
              \\"Feel_Ideal\\",
              \\"slider\\"
            ],
            \\"message\\": \\"Required\\"
          }
        ],
        \\"name\\": \\"ZodError\\"
      },
      {
        \\"issues\\": [
          {
            \\"code\\": \\"invalid_union\\",
            \\"unionErrors\\": [
              {
                \\"issues\\": [
                  {
                    \\"code\\": \\"invalid_type\\",
                    \\"expected\\": \\"string\\",
                    \\"received\\": \\"undefined\\",
                    \\"path\\": [
                      \\"Feel_Ideal\\",
                      \\"choices\\"
                    ],
                    \\"message\\": \\"Required\\"
                  }
                ],
                \\"name\\": \\"ZodError\\"
              },
              {
                \\"issues\\": [
                  {
                    \\"code\\": \\"invalid_type\\",
                    \\"expected\\": \\"array\\",
                    \\"received\\": \\"undefined\\",
                    \\"path\\": [
                      \\"Feel_Ideal\\",
                      \\"choices\\"
                    ],
                    \\"message\\": \\"Required\\"
                  }
                ],
                \\"name\\": \\"ZodError\\"
              }
            ],
            \\"path\\": [
              \\"Feel_Ideal\\",
              \\"choices\\"
            ],
            \\"message\\": \\"Invalid input\\"
          }
        ],
        \\"name\\": \\"ZodError\\"
      },
      {
        \\"issues\\": [
          {
            \\"code\\": \\"invalid_union\\",
            \\"unionErrors\\": [
              {
                \\"issues\\": [
                  {
                    \\"code\\": \\"invalid_type\\",
                    \\"expected\\": \\"string\\",
                    \\"received\\": \\"undefined\\",
                    \\"path\\": [
                      \\"Feel_Ideal\\",
                      \\"choices\\"
                    ],
                    \\"message\\": \\"Required\\"
                  }
                ],
                \\"name\\": \\"ZodError\\"
              },
              {
                \\"issues\\": [
                  {
                    \\"code\\": \\"invalid_type\\",
                    \\"expected\\": \\"array\\",
                    \\"received\\": \\"undefined\\",
                    \\"path\\": [
                      \\"Feel_Ideal\\",
                      \\"choices\\"
                    ],
                    \\"message\\": \\"Required\\"
                  }
                ],
                \\"name\\": \\"ZodError\\"
              }
            ],
            \\"path\\": [
              \\"Feel_Ideal\\",
              \\"choices\\"
            ],
            \\"message\\": \\"Invalid input\\"
          }
        ],
        \\"name\\": \\"ZodError\\"
      },
      {
        \\"issues\\": [
          {
            \\"code\\": \\"invalid_type\\",
            \\"expected\\": \\"YesNo\\",
            \\"received\\": \\"ChoicesWithSingleAnswer\\",
            \\"path\\": [
              \\"Feel_Ideal\\",
              \\"type\\"
            ],
            \\"message\\": \\"Expected YesNo, received ChoicesWithSingleAnswer\\"
          }
        ],
        \\"name\\": \\"ZodError\\"
      },
      {
        \\"issues\\": [
          {
            \\"code\\": \\"invalid_type\\",
            \\"expected\\": \\"MultipleText\\",
            \\"received\\": \\"ChoicesWithSingleAnswer\\",
            \\"path\\": [
              \\"Feel_Ideal\\",
              \\"type\\"
            ],
            \\"message\\": \\"Expected MultipleText, received ChoicesWithSingleAnswer\\"
          },
          {
            \\"code\\": \\"invalid_type\\",
            \\"expected\\": \\"string\\",
            \\"received\\": \\"undefined\\",
            \\"path\\": [
              \\"Feel_Ideal\\",
              \\"indexName\\"
            ],
            \\"message\\": \\"Required\\"
          },
          {
            \\"code\\": \\"invalid_type\\",
            \\"expected\\": \\"string\\",
            \\"received\\": \\"undefined\\",
            \\"path\\": [
              \\"Feel_Ideal\\",
              \\"variableName\\"
            ],
            \\"message\\": \\"Required\\"
          },
          {
            \\"code\\": \\"invalid_type\\",
            \\"expected\\": \\"number\\",
            \\"received\\": \\"undefined\\",
            \\"path\\": [
              \\"Feel_Ideal\\",
              \\"max\\"
            ],
            \\"message\\": \\"Required\\"
          }
        ],
        \\"name\\": \\"ZodError\\"
      },
      {
        \\"issues\\": [
          {
            \\"code\\": \\"invalid_type\\",
            \\"expected\\": \\"HowLongAgo\\",
            \\"received\\": \\"ChoicesWithSingleAnswer\\",
            \\"path\\": [
              \\"Feel_Ideal\\",
              \\"type\\"
            ],
            \\"message\\": \\"Expected HowLongAgo, received ChoicesWithSingleAnswer\\"
          }
        ],
        \\"name\\": \\"ZodError\\"
      },
      {
        \\"issues\\": [
          {
            \\"code\\": \\"invalid_type\\",
            \\"expected\\": \\"Branch\\",
            \\"received\\": \\"ChoicesWithSingleAnswer\\",
            \\"path\\": [
              \\"Feel_Ideal\\",
              \\"type\\"
            ],
            \\"message\\": \\"Expected Branch, received ChoicesWithSingleAnswer\\"
          },
          {
            \\"code\\": \\"invalid_type\\",
            \\"expected\\": \\"object\\",
            \\"received\\": \\"undefined\\",
            \\"path\\": [
              \\"Feel_Ideal\\",
              \\"condition\\"
            ],
            \\"message\\": \\"Required\\"
          },
          {
            \\"code\\": \\"invalid_type\\",
            \\"expected\\": \\"object\\",
            \\"received\\": \\"undefined\\",
            \\"path\\": [
              \\"Feel_Ideal\\",
              \\"branchStartId\\"
            ],
            \\"message\\": \\"Required\\"
          }
        ],
        \\"name\\": \\"ZodError\\"
      },
      {
        \\"issues\\": [
          {
            \\"code\\": \\"invalid_type\\",
            \\"expected\\": \\"BranchWithRelativeComparison\\",
            \\"received\\": \\"ChoicesWithSingleAnswer\\",
            \\"path\\": [
              \\"Feel_Ideal\\",
              \\"type\\"
            ],
            \\"message\\": \\"Expected BranchWithRelativeComparison, received ChoicesWithSingleAnswer\\"
          },
          {
            \\"code\\": \\"invalid_type\\",
            \\"expected\\": \\"object\\",
            \\"received\\": \\"undefined\\",
            \\"path\\": [
              \\"Feel_Ideal\\",
              \\"branchStartId\\"
            ],
            \\"message\\": \\"Required\\"
          }
        ],
        \\"name\\": \\"ZodError\\"
      },
      {
        \\"issues\\": [
          {
            \\"code\\": \\"invalid_type\\",
            \\"expected\\": \\"Wrapper\\",
            \\"received\\": \\"ChoicesWithSingleAnswer\\",
            \\"path\\": [
              \\"Feel_Ideal\\",
              \\"type\\"
            ],
            \\"message\\": \\"Expected Wrapper, received ChoicesWithSingleAnswer\\"
          },
          {
            \\"code\\": \\"invalid_type\\",
            \\"expected\\": \\"string\\",
            \\"received\\": \\"undefined\\",
            \\"path\\": [
              \\"Feel_Ideal\\",
              \\"innerNext\\"
            ],
            \\"message\\": \\"Required\\"
          }
        ],
        \\"name\\": \\"ZodError\\"
      }
    ],
    \\"path\\": [
      \\"Feel_Ideal\\"
    ],
    \\"message\\": \\"Invalid input\\"
  },
  {
    \\"code\\": \\"invalid_union\\",
    \\"unionErrors\\": [
      {
        \\"issues\\": [
          {
            \\"code\\": \\"invalid_type\\",
            \\"expected\\": \\"array\\",
            \\"received\\": \\"undefined\\",
            \\"path\\": [
              \\"Feel_Current\\",
              \\"slider\\"
            ],
            \\"message\\": \\"Required\\"
          }
        ],
        \\"name\\": \\"ZodError\\"
      },
      {
        \\"issues\\": [
          {
            \\"code\\": \\"invalid_union\\",
            \\"unionErrors\\": [
              {
                \\"issues\\": [
                  {
                    \\"code\\": \\"invalid_type\\",
                    \\"expected\\": \\"ChoicesWithSingleAnswer\\",
                    \\"received\\": \\"Slider\\",
                    \\"path\\": [
                      \\"Feel_Current\\",
                      \\"type\\"
                    ],
                    \\"message\\": \\"Expected ChoicesWithSingleAnswer, received Slider\\"
                  }
                ],
                \\"name\\": \\"ZodError\\"
              },
              {
                \\"issues\\": [
                  {
                    \\"code\\": \\"invalid_type\\",
                    \\"expected\\": \\"ChoicesWithMultipleAnswers\\",
                    \\"received\\": \\"Slider\\",
                    \\"path\\": [
                      \\"Feel_Current\\",
                      \\"type\\"
                    ],
                    \\"message\\": \\"Expected ChoicesWithMultipleAnswers, received Slider\\"
                  }
                ],
                \\"name\\": \\"ZodError\\"
              }
            ],
            \\"path\\": [
              \\"Feel_Current\\",
              \\"type\\"
            ],
            \\"message\\": \\"Invalid input\\"
          },
          {
            \\"code\\": \\"invalid_union\\",
            \\"unionErrors\\": [
              {
                \\"issues\\": [
                  {
                    \\"code\\": \\"invalid_type\\",
                    \\"expected\\": \\"string\\",
                    \\"received\\": \\"undefined\\",
                    \\"path\\": [
                      \\"Feel_Current\\",
                      \\"choices\\"
                    ],
                    \\"message\\": \\"Required\\"
                  }
                ],
                \\"name\\": \\"ZodError\\"
              },
              {
                \\"issues\\": [
                  {
                    \\"code\\": \\"invalid_type\\",
                    \\"expected\\": \\"array\\",
                    \\"received\\": \\"undefined\\",
                    \\"path\\": [
                      \\"Feel_Current\\",
                      \\"choices\\"
                    ],
                    \\"message\\": \\"Required\\"
                  }
                ],
                \\"name\\": \\"ZodError\\"
              }
            ],
            \\"path\\": [
              \\"Feel_Current\\",
              \\"choices\\"
            ],
            \\"message\\": \\"Invalid input\\"
          }
        ],
        \\"name\\": \\"ZodError\\"
      },
      {
        \\"issues\\": [
          {
            \\"code\\": \\"invalid_union\\",
            \\"unionErrors\\": [
              {
                \\"issues\\": [
                  {
                    \\"code\\": \\"invalid_type\\",
                    \\"expected\\": \\"ChoicesWithSingleAnswer\\",
                    \\"received\\": \\"Slider\\",
                    \\"path\\": [
                      \\"Feel_Current\\",
                      \\"type\\"
                    ],
                    \\"message\\": \\"Expected ChoicesWithSingleAnswer, received Slider\\"
                  }
                ],
                \\"name\\": \\"ZodError\\"
              },
              {
                \\"issues\\": [
                  {
                    \\"code\\": \\"invalid_type\\",
                    \\"expected\\": \\"ChoicesWithMultipleAnswers\\",
                    \\"received\\": \\"Slider\\",
                    \\"path\\": [
                      \\"Feel_Current\\",
                      \\"type\\"
                    ],
                    \\"message\\": \\"Expected ChoicesWithMultipleAnswers, received Slider\\"
                  }
                ],
                \\"name\\": \\"ZodError\\"
              }
            ],
            \\"path\\": [
              \\"Feel_Current\\",
              \\"type\\"
            ],
            \\"message\\": \\"Invalid input\\"
          },
          {
            \\"code\\": \\"invalid_union\\",
            \\"unionErrors\\": [
              {
                \\"issues\\": [
                  {
                    \\"code\\": \\"invalid_type\\",
                    \\"expected\\": \\"string\\",
                    \\"received\\": \\"undefined\\",
                    \\"path\\": [
                      \\"Feel_Current\\",
                      \\"choices\\"
                    ],
                    \\"message\\": \\"Required\\"
                  }
                ],
                \\"name\\": \\"ZodError\\"
              },
              {
                \\"issues\\": [
                  {
                    \\"code\\": \\"invalid_type\\",
                    \\"expected\\": \\"array\\",
                    \\"received\\": \\"undefined\\",
                    \\"path\\": [
                      \\"Feel_Current\\",
                      \\"choices\\"
                    ],
                    \\"message\\": \\"Required\\"
                  }
                ],
                \\"name\\": \\"ZodError\\"
              }
            ],
            \\"path\\": [
              \\"Feel_Current\\",
              \\"choices\\"
            ],
            \\"message\\": \\"Invalid input\\"
          }
        ],
        \\"name\\": \\"ZodError\\"
      },
      {
        \\"issues\\": [
          {
            \\"code\\": \\"invalid_type\\",
            \\"expected\\": \\"YesNo\\",
            \\"received\\": \\"Slider\\",
            \\"path\\": [
              \\"Feel_Current\\",
              \\"type\\"
            ],
            \\"message\\": \\"Expected YesNo, received Slider\\"
          }
        ],
        \\"name\\": \\"ZodError\\"
      },
      {
        \\"issues\\": [
          {
            \\"code\\": \\"invalid_type\\",
            \\"expected\\": \\"MultipleText\\",
            \\"received\\": \\"Slider\\",
            \\"path\\": [
              \\"Feel_Current\\",
              \\"type\\"
            ],
            \\"message\\": \\"Expected MultipleText, received Slider\\"
          },
          {
            \\"code\\": \\"invalid_type\\",
            \\"expected\\": \\"string\\",
            \\"received\\": \\"undefined\\",
            \\"path\\": [
              \\"Feel_Current\\",
              \\"indexName\\"
            ],
            \\"message\\": \\"Required\\"
          },
          {
            \\"code\\": \\"invalid_type\\",
            \\"expected\\": \\"string\\",
            \\"received\\": \\"undefined\\",
            \\"path\\": [
              \\"Feel_Current\\",
              \\"variableName\\"
            ],
            \\"message\\": \\"Required\\"
          },
          {
            \\"code\\": \\"invalid_type\\",
            \\"expected\\": \\"number\\",
            \\"received\\": \\"undefined\\",
            \\"path\\": [
              \\"Feel_Current\\",
              \\"max\\"
            ],
            \\"message\\": \\"Required\\"
          }
        ],
        \\"name\\": \\"ZodError\\"
      },
      {
        \\"issues\\": [
          {
            \\"code\\": \\"invalid_type\\",
            \\"expected\\": \\"HowLongAgo\\",
            \\"received\\": \\"Slider\\",
            \\"path\\": [
              \\"Feel_Current\\",
              \\"type\\"
            ],
            \\"message\\": \\"Expected HowLongAgo, received Slider\\"
          }
        ],
        \\"name\\": \\"ZodError\\"
      },
      {
        \\"issues\\": [
          {
            \\"code\\": \\"invalid_type\\",
            \\"expected\\": \\"Branch\\",
            \\"received\\": \\"Slider\\",
            \\"path\\": [
              \\"Feel_Current\\",
              \\"type\\"
            ],
            \\"message\\": \\"Expected Branch, received Slider\\"
          },
          {
            \\"code\\": \\"invalid_type\\",
            \\"expected\\": \\"object\\",
            \\"received\\": \\"undefined\\",
            \\"path\\": [
              \\"Feel_Current\\",
              \\"condition\\"
            ],
            \\"message\\": \\"Required\\"
          },
          {
            \\"code\\": \\"invalid_type\\",
            \\"expected\\": \\"object\\",
            \\"received\\": \\"undefined\\",
            \\"path\\": [
              \\"Feel_Current\\",
              \\"branchStartId\\"
            ],
            \\"message\\": \\"Required\\"
          }
        ],
        \\"name\\": \\"ZodError\\"
      },
      {
        \\"issues\\": [
          {
            \\"code\\": \\"invalid_type\\",
            \\"expected\\": \\"BranchWithRelativeComparison\\",
            \\"received\\": \\"Slider\\",
            \\"path\\": [
              \\"Feel_Current\\",
              \\"type\\"
            ],
            \\"message\\": \\"Expected BranchWithRelativeComparison, received Slider\\"
          },
          {
            \\"code\\": \\"invalid_type\\",
            \\"expected\\": \\"object\\",
            \\"received\\": \\"undefined\\",
            \\"path\\": [
              \\"Feel_Current\\",
              \\"branchStartId\\"
            ],
            \\"message\\": \\"Required\\"
          }
        ],
        \\"name\\": \\"ZodError\\"
      },
      {
        \\"issues\\": [
          {
            \\"code\\": \\"invalid_type\\",
            \\"expected\\": \\"Wrapper\\",
            \\"received\\": \\"Slider\\",
            \\"path\\": [
              \\"Feel_Current\\",
              \\"type\\"
            ],
            \\"message\\": \\"Expected Wrapper, received Slider\\"
          },
          {
            \\"code\\": \\"invalid_type\\",
            \\"expected\\": \\"string\\",
            \\"received\\": \\"undefined\\",
            \\"path\\": [
              \\"Feel_Current\\",
              \\"innerNext\\"
            ],
            \\"message\\": \\"Required\\"
          }
        ],
        \\"name\\": \\"ZodError\\"
      }
    ],
    \\"path\\": [
      \\"Feel_Current\\"
    ],
    \\"message\\": \\"Invalid input\\"
  },
  {
    \\"code\\": \\"invalid_union\\",
    \\"unionErrors\\": [
      {
        \\"issues\\": [
          {
            \\"code\\": \\"invalid_type\\",
            \\"expected\\": \\"Slider\\",
            \\"received\\": \\"MultipleText\\",
            \\"path\\": [
              \\"Contact_List\\",
              \\"type\\"
            ],
            \\"message\\": \\"Expected Slider, received MultipleText\\"
          },
          {
            \\"code\\": \\"invalid_type\\",
            \\"expected\\": \\"array\\",
            \\"received\\": \\"undefined\\",
            \\"path\\": [
              \\"Contact_List\\",
              \\"slider\\"
            ],
            \\"message\\": \\"Required\\"
          }
        ],
        \\"name\\": \\"ZodError\\"
      },
      {
        \\"issues\\": [
          {
            \\"code\\": \\"invalid_union\\",
            \\"unionErrors\\": [
              {
                \\"issues\\": [
                  {
                    \\"code\\": \\"invalid_type\\",
                    \\"expected\\": \\"ChoicesWithSingleAnswer\\",
                    \\"received\\": \\"MultipleText\\",
                    \\"path\\": [
                      \\"Contact_List\\",
                      \\"type\\"
                    ],
                    \\"message\\": \\"Expected ChoicesWithSingleAnswer, received MultipleText\\"
                  }
                ],
                \\"name\\": \\"ZodError\\"
              },
              {
                \\"issues\\": [
                  {
                    \\"code\\": \\"invalid_type\\",
                    \\"expected\\": \\"ChoicesWithMultipleAnswers\\",
                    \\"received\\": \\"MultipleText\\",
                    \\"path\\": [
                      \\"Contact_List\\",
                      \\"type\\"
                    ],
                    \\"message\\": \\"Expected ChoicesWithMultipleAnswers, received MultipleText\\"
                  }
                ],
                \\"name\\": \\"ZodError\\"
              }
            ],
            \\"path\\": [
              \\"Contact_List\\",
              \\"type\\"
            ],
            \\"message\\": \\"Invalid input\\"
          },
          {
            \\"code\\": \\"invalid_union\\",
            \\"unionErrors\\": [
              {
                \\"issues\\": [
                  {
                    \\"code\\": \\"invalid_type\\",
                    \\"expected\\": \\"string\\",
                    \\"received\\": \\"undefined\\",
                    \\"path\\": [
                      \\"Contact_List\\",
                      \\"choices\\"
                    ],
                    \\"message\\": \\"Required\\"
                  }
                ],
                \\"name\\": \\"ZodError\\"
              },
              {
                \\"issues\\": [
                  {
                    \\"code\\": \\"invalid_type\\",
                    \\"expected\\": \\"array\\",
                    \\"received\\": \\"undefined\\",
                    \\"path\\": [
                      \\"Contact_List\\",
                      \\"choices\\"
                    ],
                    \\"message\\": \\"Required\\"
                  }
                ],
                \\"name\\": \\"ZodError\\"
              }
            ],
            \\"path\\": [
              \\"Contact_List\\",
              \\"choices\\"
            ],
            \\"message\\": \\"Invalid input\\"
          }
        ],
        \\"name\\": \\"ZodError\\"
      },
      {
        \\"issues\\": [
          {
            \\"code\\": \\"invalid_union\\",
            \\"unionErrors\\": [
              {
                \\"issues\\": [
                  {
                    \\"code\\": \\"invalid_type\\",
                    \\"expected\\": \\"ChoicesWithSingleAnswer\\",
                    \\"received\\": \\"MultipleText\\",
                    \\"path\\": [
                      \\"Contact_List\\",
                      \\"type\\"
                    ],
                    \\"message\\": \\"Expected ChoicesWithSingleAnswer, received MultipleText\\"
                  }
                ],
                \\"name\\": \\"ZodError\\"
              },
              {
                \\"issues\\": [
                  {
                    \\"code\\": \\"invalid_type\\",
                    \\"expected\\": \\"ChoicesWithMultipleAnswers\\",
                    \\"received\\": \\"MultipleText\\",
                    \\"path\\": [
                      \\"Contact_List\\",
                      \\"type\\"
                    ],
                    \\"message\\": \\"Expected ChoicesWithMultipleAnswers, received MultipleText\\"
                  }
                ],
                \\"name\\": \\"ZodError\\"
              }
            ],
            \\"path\\": [
              \\"Contact_List\\",
              \\"type\\"
            ],
            \\"message\\": \\"Invalid input\\"
          },
          {
            \\"code\\": \\"invalid_union\\",
            \\"unionErrors\\": [
              {
                \\"issues\\": [
                  {
                    \\"code\\": \\"invalid_type\\",
                    \\"expected\\": \\"string\\",
                    \\"received\\": \\"undefined\\",
                    \\"path\\": [
                      \\"Contact_List\\",
                      \\"choices\\"
                    ],
                    \\"message\\": \\"Required\\"
                  }
                ],
                \\"name\\": \\"ZodError\\"
              },
              {
                \\"issues\\": [
                  {
                    \\"code\\": \\"invalid_type\\",
                    \\"expected\\": \\"array\\",
                    \\"received\\": \\"undefined\\",
                    \\"path\\": [
                      \\"Contact_List\\",
                      \\"choices\\"
                    ],
                    \\"message\\": \\"Required\\"
                  }
                ],
                \\"name\\": \\"ZodError\\"
              }
            ],
            \\"path\\": [
              \\"Contact_List\\",
              \\"choices\\"
            ],
            \\"message\\": \\"Invalid input\\"
          }
        ],
        \\"name\\": \\"ZodError\\"
      },
      {
        \\"issues\\": [
          {
            \\"code\\": \\"invalid_type\\",
            \\"expected\\": \\"YesNo\\",
            \\"received\\": \\"MultipleText\\",
            \\"path\\": [
              \\"Contact_List\\",
              \\"type\\"
            ],
            \\"message\\": \\"Expected YesNo, received MultipleText\\"
          }
        ],
        \\"name\\": \\"ZodError\\"
      },
      {
        \\"issues\\": [
          {
            \\"code\\": \\"invalid_type\\",
            \\"expected\\": \\"string\\",
            \\"received\\": \\"undefined\\",
            \\"path\\": [
              \\"Contact_List\\",
              \\"indexName\\"
            ],
            \\"message\\": \\"Required\\"
          },
          {
            \\"code\\": \\"invalid_type\\",
            \\"expected\\": \\"string\\",
            \\"received\\": \\"undefined\\",
            \\"path\\": [
              \\"Contact_List\\",
              \\"variableName\\"
            ],
            \\"message\\": \\"Required\\"
          },
          {
            \\"code\\": \\"invalid_type\\",
            \\"expected\\": \\"number\\",
            \\"received\\": \\"undefined\\",
            \\"path\\": [
              \\"Contact_List\\",
              \\"max\\"
            ],
            \\"message\\": \\"Required\\"
          }
        ],
        \\"name\\": \\"ZodError\\"
      },
      {
        \\"issues\\": [
          {
            \\"code\\": \\"invalid_type\\",
            \\"expected\\": \\"HowLongAgo\\",
            \\"received\\": \\"MultipleText\\",
            \\"path\\": [
              \\"Contact_List\\",
              \\"type\\"
            ],
            \\"message\\": \\"Expected HowLongAgo, received MultipleText\\"
          }
        ],
        \\"name\\": \\"ZodError\\"
      },
      {
        \\"issues\\": [
          {
            \\"code\\": \\"invalid_type\\",
            \\"expected\\": \\"Branch\\",
            \\"received\\": \\"MultipleText\\",
            \\"path\\": [
              \\"Contact_List\\",
              \\"type\\"
            ],
            \\"message\\": \\"Expected Branch, received MultipleText\\"
          },
          {
            \\"code\\": \\"invalid_type\\",
            \\"expected\\": \\"object\\",
            \\"received\\": \\"undefined\\",
            \\"path\\": [
              \\"Contact_List\\",
              \\"condition\\"
            ],
            \\"message\\": \\"Required\\"
          },
          {
            \\"code\\": \\"invalid_type\\",
            \\"expected\\": \\"object\\",
            \\"received\\": \\"undefined\\",
            \\"path\\": [
              \\"Contact_List\\",
              \\"branchStartId\\"
            ],
            \\"message\\": \\"Required\\"
          }
        ],
        \\"name\\": \\"ZodError\\"
      },
      {
        \\"issues\\": [
          {
            \\"code\\": \\"invalid_type\\",
            \\"expected\\": \\"BranchWithRelativeComparison\\",
            \\"received\\": \\"MultipleText\\",
            \\"path\\": [
              \\"Contact_List\\",
              \\"type\\"
            ],
            \\"message\\": \\"Expected BranchWithRelativeComparison, received MultipleText\\"
          },
          {
            \\"code\\": \\"invalid_type\\",
            \\"expected\\": \\"object\\",
            \\"received\\": \\"undefined\\",
            \\"path\\": [
              \\"Contact_List\\",
              \\"branchStartId\\"
            ],
            \\"message\\": \\"Required\\"
          }
        ],
        \\"name\\": \\"ZodError\\"
      },
      {
        \\"issues\\": [
          {
            \\"code\\": \\"invalid_type\\",
            \\"expected\\": \\"Wrapper\\",
            \\"received\\": \\"MultipleText\\",
            \\"path\\": [
              \\"Contact_List\\",
              \\"type\\"
            ],
            \\"message\\": \\"Expected Wrapper, received MultipleText\\"
          },
          {
            \\"code\\": \\"invalid_type\\",
            \\"expected\\": \\"string\\",
            \\"received\\": \\"undefined\\",
            \\"path\\": [
              \\"Contact_List\\",
              \\"innerNext\\"
            ],
            \\"message\\": \\"Required\\"
          }
        ],
        \\"name\\": \\"ZodError\\"
      }
    ],
    \\"path\\": [
      \\"Contact_List\\"
    ],
    \\"message\\": \\"Invalid input\\"
  }
]"
`;

exports[`QuestionsListSchema should show individual question error: single 1`] = `
"[
  {
    \\"code\\": \\"invalid_union\\",
    \\"unionErrors\\": [
      {
        \\"issues\\": [
          {
            \\"code\\": \\"invalid_type\\",
            \\"expected\\": \\"Slider\\",
            \\"received\\": \\"MultipleText\\",
            \\"path\\": [
              \\"Feel_Ideal\\",
              \\"type\\"
            ],
            \\"message\\": \\"Expected Slider, received MultipleText\\"
          },
          {
            \\"code\\": \\"invalid_type\\",
            \\"expected\\": \\"array\\",
            \\"received\\": \\"undefined\\",
            \\"path\\": [
              \\"Feel_Ideal\\",
              \\"slider\\"
            ],
            \\"message\\": \\"Required\\"
          }
        ],
        \\"name\\": \\"ZodError\\"
      },
      {
        \\"issues\\": [
          {
            \\"code\\": \\"invalid_union\\",
            \\"unionErrors\\": [
              {
                \\"issues\\": [
                  {
                    \\"code\\": \\"invalid_type\\",
                    \\"expected\\": \\"ChoicesWithSingleAnswer\\",
                    \\"received\\": \\"MultipleText\\",
                    \\"path\\": [
                      \\"Feel_Ideal\\",
                      \\"type\\"
                    ],
                    \\"message\\": \\"Expected ChoicesWithSingleAnswer, received MultipleText\\"
                  }
                ],
                \\"name\\": \\"ZodError\\"
              },
              {
                \\"issues\\": [
                  {
                    \\"code\\": \\"invalid_type\\",
                    \\"expected\\": \\"ChoicesWithMultipleAnswers\\",
                    \\"received\\": \\"MultipleText\\",
                    \\"path\\": [
                      \\"Feel_Ideal\\",
                      \\"type\\"
                    ],
                    \\"message\\": \\"Expected ChoicesWithMultipleAnswers, received MultipleText\\"
                  }
                ],
                \\"name\\": \\"ZodError\\"
              }
            ],
            \\"path\\": [
              \\"Feel_Ideal\\",
              \\"type\\"
            ],
            \\"message\\": \\"Invalid input\\"
          },
          {
            \\"code\\": \\"invalid_union\\",
            \\"unionErrors\\": [
              {
                \\"issues\\": [
                  {
                    \\"code\\": \\"invalid_type\\",
                    \\"expected\\": \\"string\\",
                    \\"received\\": \\"undefined\\",
                    \\"path\\": [
                      \\"Feel_Ideal\\",
                      \\"choices\\"
                    ],
                    \\"message\\": \\"Required\\"
                  }
                ],
                \\"name\\": \\"ZodError\\"
              },
              {
                \\"issues\\": [
                  {
                    \\"code\\": \\"invalid_type\\",
                    \\"expected\\": \\"array\\",
                    \\"received\\": \\"undefined\\",
                    \\"path\\": [
                      \\"Feel_Ideal\\",
                      \\"choices\\"
                    ],
                    \\"message\\": \\"Required\\"
                  }
                ],
                \\"name\\": \\"ZodError\\"
              }
            ],
            \\"path\\": [
              \\"Feel_Ideal\\",
              \\"choices\\"
            ],
            \\"message\\": \\"Invalid input\\"
          }
        ],
        \\"name\\": \\"ZodError\\"
      },
      {
        \\"issues\\": [
          {
            \\"code\\": \\"invalid_union\\",
            \\"unionErrors\\": [
              {
                \\"issues\\": [
                  {
                    \\"code\\": \\"invalid_type\\",
                    \\"expected\\": \\"ChoicesWithSingleAnswer\\",
                    \\"received\\": \\"MultipleText\\",
                    \\"path\\": [
                      \\"Feel_Ideal\\",
                      \\"type\\"
                    ],
                    \\"message\\": \\"Expected ChoicesWithSingleAnswer, received MultipleText\\"
                  }
                ],
                \\"name\\": \\"ZodError\\"
              },
              {
                \\"issues\\": [
                  {
                    \\"code\\": \\"invalid_type\\",
                    \\"expected\\": \\"ChoicesWithMultipleAnswers\\",
                    \\"received\\": \\"MultipleText\\",
                    \\"path\\": [
                      \\"Feel_Ideal\\",
                      \\"type\\"
                    ],
                    \\"message\\": \\"Expected ChoicesWithMultipleAnswers, received MultipleText\\"
                  }
                ],
                \\"name\\": \\"ZodError\\"
              }
            ],
            \\"path\\": [
              \\"Feel_Ideal\\",
              \\"type\\"
            ],
            \\"message\\": \\"Invalid input\\"
          },
          {
            \\"code\\": \\"invalid_union\\",
            \\"unionErrors\\": [
              {
                \\"issues\\": [
                  {
                    \\"code\\": \\"invalid_type\\",
                    \\"expected\\": \\"string\\",
                    \\"received\\": \\"undefined\\",
                    \\"path\\": [
                      \\"Feel_Ideal\\",
                      \\"choices\\"
                    ],
                    \\"message\\": \\"Required\\"
                  }
                ],
                \\"name\\": \\"ZodError\\"
              },
              {
                \\"issues\\": [
                  {
                    \\"code\\": \\"invalid_type\\",
                    \\"expected\\": \\"array\\",
                    \\"received\\": \\"undefined\\",
                    \\"path\\": [
                      \\"Feel_Ideal\\",
                      \\"choices\\"
                    ],
                    \\"message\\": \\"Required\\"
                  }
                ],
                \\"name\\": \\"ZodError\\"
              }
            ],
            \\"path\\": [
              \\"Feel_Ideal\\",
              \\"choices\\"
            ],
            \\"message\\": \\"Invalid input\\"
          }
        ],
        \\"name\\": \\"ZodError\\"
      },
      {
        \\"issues\\": [
          {
            \\"code\\": \\"invalid_type\\",
            \\"expected\\": \\"YesNo\\",
            \\"received\\": \\"MultipleText\\",
            \\"path\\": [
              \\"Feel_Ideal\\",
              \\"type\\"
            ],
            \\"message\\": \\"Expected YesNo, received MultipleText\\"
          }
        ],
        \\"name\\": \\"ZodError\\"
      },
      {
        \\"issues\\": [
          {
            \\"code\\": \\"invalid_type\\",
            \\"expected\\": \\"string\\",
            \\"received\\": \\"undefined\\",
            \\"path\\": [
              \\"Feel_Ideal\\",
              \\"indexName\\"
            ],
            \\"message\\": \\"Required\\"
          },
          {
            \\"code\\": \\"invalid_type\\",
            \\"expected\\": \\"string\\",
            \\"received\\": \\"undefined\\",
            \\"path\\": [
              \\"Feel_Ideal\\",
              \\"variableName\\"
            ],
            \\"message\\": \\"Required\\"
          },
          {
            \\"code\\": \\"invalid_type\\",
            \\"expected\\": \\"number\\",
            \\"received\\": \\"undefined\\",
            \\"path\\": [
              \\"Feel_Ideal\\",
              \\"max\\"
            ],
            \\"message\\": \\"Required\\"
          }
        ],
        \\"name\\": \\"ZodError\\"
      },
      {
        \\"issues\\": [
          {
            \\"code\\": \\"invalid_type\\",
            \\"expected\\": \\"HowLongAgo\\",
            \\"received\\": \\"MultipleText\\",
            \\"path\\": [
              \\"Feel_Ideal\\",
              \\"type\\"
            ],
            \\"message\\": \\"Expected HowLongAgo, received MultipleText\\"
          }
        ],
        \\"name\\": \\"ZodError\\"
      },
      {
        \\"issues\\": [
          {
            \\"code\\": \\"invalid_type\\",
            \\"expected\\": \\"Branch\\",
            \\"received\\": \\"MultipleText\\",
            \\"path\\": [
              \\"Feel_Ideal\\",
              \\"type\\"
            ],
            \\"message\\": \\"Expected Branch, received MultipleText\\"
          },
          {
            \\"code\\": \\"invalid_type\\",
            \\"expected\\": \\"object\\",
            \\"received\\": \\"undefined\\",
            \\"path\\": [
              \\"Feel_Ideal\\",
              \\"condition\\"
            ],
            \\"message\\": \\"Required\\"
          },
          {
            \\"code\\": \\"invalid_type\\",
            \\"expected\\": \\"object\\",
            \\"received\\": \\"undefined\\",
            \\"path\\": [
              \\"Feel_Ideal\\",
              \\"branchStartId\\"
            ],
            \\"message\\": \\"Required\\"
          }
        ],
        \\"name\\": \\"ZodError\\"
      },
      {
        \\"issues\\": [
          {
            \\"code\\": \\"invalid_type\\",
            \\"expected\\": \\"BranchWithRelativeComparison\\",
            \\"received\\": \\"MultipleText\\",
            \\"path\\": [
              \\"Feel_Ideal\\",
              \\"type\\"
            ],
            \\"message\\": \\"Expected BranchWithRelativeComparison, received MultipleText\\"
          },
          {
            \\"code\\": \\"invalid_type\\",
            \\"expected\\": \\"object\\",
            \\"received\\": \\"undefined\\",
            \\"path\\": [
              \\"Feel_Ideal\\",
              \\"branchStartId\\"
            ],
            \\"message\\": \\"Required\\"
          }
        ],
        \\"name\\": \\"ZodError\\"
      },
      {
        \\"issues\\": [
          {
            \\"code\\": \\"invalid_type\\",
            \\"expected\\": \\"Wrapper\\",
            \\"received\\": \\"MultipleText\\",
            \\"path\\": [
              \\"Feel_Ideal\\",
              \\"type\\"
            ],
            \\"message\\": \\"Expected Wrapper, received MultipleText\\"
          },
          {
            \\"code\\": \\"invalid_type\\",
            \\"expected\\": \\"string\\",
            \\"received\\": \\"undefined\\",
            \\"path\\": [
              \\"Feel_Ideal\\",
              \\"innerNext\\"
            ],
            \\"message\\": \\"Required\\"
          }
        ],
        \\"name\\": \\"ZodError\\"
      }
    ],
    \\"path\\": [
      \\"Feel_Ideal\\"
    ],
    \\"message\\": \\"Invalid input\\"
  }
]"
`;
